# portfolio

./: .env  .gitignore  Cargo.toml  README.md  build-wasm.sh  docker-compose.yml  justfile
backend/: .dockerignore  .env  Cargo.toml  Dockerfile
backend/.sqlx/: query-audiobooks-list.json
backend/migrations/: 20240124000001_create_audiobooks.sql  20250125000001_create_projects.sql  20250125000002_fix_timestamp_columns.sql  20250725173325_initial_schema.down.sql  20250725173325_initial_schema.up.sql  20250725173422_seed_projects.down.sql  20250725173422_seed_projects.up.sql  20250725182954_add_more_github_projects.down.sql  20250725182954_add_more_github_projects.up.sql  20250725211000_update_project_images.down.sql  20250725211000_update_project_images.up.sql  20250725211500_fix_project_image_paths.down.sql  20250725211500_fix_project_image_paths.up.sql  20250725212000_remove_duplicate_projects.down.sql  20250725212000_remove_duplicate_projects.up.sql  20250727115405_add_webgpu_engine_project.down.sql  20250727115405_add_webgpu_engine_project.up.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/models/: audiobook.rs  mod.rs  project.rs
backend/src/routes/: audiobooks.rs  mod.rs  projects.rs
frontend/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf
frontend/public/: styles.css
frontend/src/: app.rs  main.rs
frontend/src/components/: footer.rs  header.rs
frontend/src/pages/: about.rs  contact.rs  gallery.rs  home.rs  mod.rs  projects.rs  (+1 more)
scripts/: download_unsplash_images.sh  insert_sample_projects.sql
